<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_Cylinder_Command" Id="{da610787-8da4-0918-242c-6ff79d9b522a}">
    <Declaration><![CDATA[TYPE ST_Cylinder_Command :
    STRUCT
        RetractExtendX  : BOOL;
        RetractCylinderX : BOOL;
		RetractExtendY  : BOOL;
        RetractCylinderY : BOOL;
    END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>