<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_Cylinder_Status" Id="{9c3c3cc3-d2ef-0651-271a-ba4da8a7cca9}">
    <Declaration><![CDATA[TYPE ST_Cylinder_Status :
    STRUCT
        ExtendedX   : BOOL;
        RetractedX  : BOOL;
        ExtendingX  : BOOL;
        RetractingX : BOOL;
		ExtendedY   : BOOL;
        RetractedY  : BOOL;
        ExtendingY : BOOL;
        RetractingY : BOOL;
    END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>